--- a/github.html
+++ b/github.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>facebook</title>
+    <title>github</title>
     <style>
         *{
             margin: 0%;
@@ -28,7 +28,7 @@
     </style>
 </head>
 <body>
-    <img src="imagens/face1.png" alt="">
+    <img src="imagens/my_github.jpeg" alt="">
     <a target="_blank" href="https://www.facebook.com/viniciusfarias.albanit.1/">ACESSE</a>
 </body>
 </html>
