--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main>
         <div id="celular">
             <iframe src="home.html" frameborder="0" name="tela" id="tela"></iframe>
         </div>
         <div id="social">
                 <a href="home.html" target="tela"><img class="rede-social" src="imagens/logo-home.jpg" alt=""></a> <br>
                 <a href="facebook.html" target="tela"><img class="rede-social" src="imagens/logo-facebook.jpg" alt=""></a> <br>
-                <a href="#" target="tela"><img class="rede-social" src="imagens/logo-github.jpg" alt=""></a> <br>
+                <a href="github.html" target="tela"><img class="rede-social" src="imagens/logo-github.jpg" alt=""></a> <br>
                 <a href="#" target="tela"><img class="rede-social" src="imagens/logo-instagram.jpg" alt=""></a>
         </div>
     </main>
