--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    
         <div id="celular">
             <iframe src="home.html" frameborder="0" name="tela" id="tela"></iframe>
         </div>
@@ -15,7 +16,7 @@
                 <a href="home.html" target="tela"><img class="rede-social" src="imagens/logo-home.jpg" alt=""></a> <br>
                 <a href="facebook.html" target="tela"><img class="rede-social" src="imagens/logo-facebook.jpg" alt=""></a> <br>
                 <a href="github.html" target="tela"><img class="rede-social" src="imagens/logo-github.jpg" alt=""></a> <br>
-                <a href="#" target="tela"><img class="rede-social" src="imagens/logo-instagram.jpg" alt=""></a>
+                <a href="insta.html" target="tela"><img class="rede-social" src="imagens/logo-instagram.jpg" alt=""></a>
         </div>
     </main>
 </body>
