--- a/github.html
+++ b/github.html
@@ -29,6 +29,6 @@
 </head>
 <body>
     <img src="imagens/my_github.jpeg" alt="">
-    <a target="_blank" href="https://www.facebook.com/viniciusfarias.albanit.1/">ACESSE</a>
+    <a target="_blank" href="https://github.com/ViniciusAlbanit">ACESSE</a>
 </body>
 </html>
